
Tue Aug 29 13:24:50 EDT 1995	Paul Park	(pjpark@mit.edu)
	* gss-{client,server}.c - Test gss_{ex,im}port_sec_context().


Fri Jul 7 15:41:47 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling.
	* configure.in - Add KRB5_LIBRARIES.


Thu Jun 15 17:35:08 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
		Also, remove DBMLIB, it was not used.
        * configure.in - Add shared library usage check.

Sat Jun 10 19:06:03 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* gss-misc.c (recv_token): Initialize local variable to 0.

Sat Jun 10 00:28:50 1995  Theodore Y. Ts'o  <tytso@dcl>

	* gss-misc.c (recv_token): Allow for partial reads while reading
		the token.

Fri Jun  9 18:26:50 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Wed May 24 11:11:45 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* gss-client.c: Include string.h or strings.h

	* gss-server.c: Include string.h or strings.h

	* configure.in: Check for string.h

Mon May 22 15:41:33 EDT 1995	Paul Park	(pjpark@mit.edu)
	* gss-server.c	: (server_establish_context) Don't call gss_release_
			  buffer right after gss_accept_sec_context because
			  in the event that we choke, we lose the minor status

Fri Apr 28 15:30:00 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (gss-client): Use $(LD) instead of $(CC) so that we can
		do purify checking.

	* gss-server.c (main, sign_server): Make changes to allow
		gss-server to be fired out of inetd.  New options: -inetd
		and -logfile.  The -logfile allows the output of
		gss-server to be redirected to a file.

	* gss-misc.c (send_token, recv_token, display_status_1): Add
	        support for -logfile option.  If the external FILE
		*display_file is set, redirect error messages to
		display_file instead of stderr.
